[project]
name = "fordefi-sdk"
version = "0.3.0"
description = "Fordefi SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.9.2",
    "ecdsa==0.13.3",
    "typer>=0.15.1",
    "requests==2.31.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fordefi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "CPY001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",
  "ARG",
  "SLF001",
  "FBT001",
  "FBT003",
]


[tool.uv]
dev-dependencies = [
    "pyright>=1.1.395",
    "pytest>=8.3.4",
    "httpretty>=1.1.4",
    "pytest-httpserver>=1.1.1",
    "pytest-cov>=6.0.0",
    "pytest-recording==0.13.2",
    "uv>=0.5.31",
    "pyperclip>=1.9.0",
    "ruff>=0.9.6",
    "openapi-core>=0.19.4",
    "openapi-spec-validator>=0.7.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

reportPrivateLocalImportUsage = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING",
    "if __name__ == \"__main__\":",
]
